# creative-research-workbench

./: .env.example  .gitignore  README.md  SESSION_LOG.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  main.py  pyproject.toml
apps/api/domain/: models.py  rules.py
apps/api/tests/: test_domain_models.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/sessions/: page.tsx
apps/web/components/: providers.tsx
apps/web/features/intake/: intake-form.tsx
apps/web/features/session/: session-detail.tsx  session-list.tsx
apps/web/lib/: api-client.ts  types.ts  utils.ts
backend/: Dockerfile  pyproject.toml
backend/data/knowledge/: README.md
backend/src/app/: main.py
backend/src/app/core/: config.py
backend/src/app/domain/: __init__.py  models.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: conftest.py  test_ingestion.py  test_retrieval.py
docs/: ADR-001-architecture.md  API_CONTRACTS.md  DOMAIN_SCHEMA.md  FAILING_INTEGRATION_TEST_SPEC.md  GHERKIN_SCENARIOS.md  IMPLEMENTATION_ROADMAP.md  PRODUCT_SPEC.md  TEST_PLAN.md  UI_MODULE_BREAKDOWN.md  definition-of-done.md  knowledge-inventory.md
docs/ADR/: ADR-001-architecture.md
docs/adr/: ADR-001-architecture.md
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: SessionListPage.tsx  SessionWorkspacePage.tsx
(+9 files in other folders)
